2007-10-27  Wakaba  <wakaba@suika.fam.cx>

	* Event.pm (init_event, init_event_ns, init_custom_event_ns): 
	The |namespaceURI| attribute was not set correctly.

	* DOMEvents.dis: Removed.

2007-10-08  Wakaba  <wakaba@suika.fam.cx>

	* Event.pm, EventTarget.pm, EventTargetNode.pm,
	EventException.pm: Implemented (but not tested!).

	* DOMException.pm (MALFORMED_EVENT_TYPE_ERR,
	EVENT_INTERFACE_NOT_SUPPORTED_ERR, EXTERNAL_EVENT_ERR): New
	error subtypes.

	* DOMImplementation.pm ($HasFeature): The |Event| feature,
	version |3.0|, is added.

	* Document.pm, Node.pm: Event attributes and
	methods are implemented.

2007-10-07  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm ($get_elements_by_selectors): Receive
	an additional argument for "current element".
	Support for |-manakai-current| and |-manakai-current(/s/)|
	pseudo-classes.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: Attribute selectors are implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm (ElementSelector): Implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm (query_selector): Implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm ($get_elements_by_selectors): Created
	from most part of |query_selector_all|.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* DOMException.pm (SYNTAX_ERR): New subtype is defined.
	(UNDECLARED_PREFIX_ERR): New subtype is defined.

	* Document.pm (Document): Implements the |DocumentSelector|
	interface.

	* Element.pm (Element): Implements the |ElementSelector|
	interface.

	* Node.pm (Node): Implements the |NSResolver| interface.

	* SelectorsAPI.pm: Now (hopefully) conform to the Selectors
	API Editor's Draft (only |query_selector_all| on |Document|,
	with limited selectors syntax support, though).

2007-09-23  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: Namespaced type/universal selectors
	are supported.

2007-09-23  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: New Perl module.
