@@ -1,3 +1,8 @@
+2007-11-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* Document.pm, Element.pm (inner_html): Use |Whatpm::HTML::Serializer|
+	for getter.
+
 2007-10-27  Wakaba  <wakaba@suika.fam.cx>
 
 	* Event.pm (init_event, init_event_ns, init_custom_event_ns): 
